landing/landing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing
  namespace: landing
  labels:
    app: landing
spec:
  replicas: 3
  selector:
    matchLabels:
      app: landing
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 8080
