landing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-service
  namespace: landing
spec:
  selector:
    app: landing
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
