landing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class:  nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    # ingress.kubernetes.io/secure-backends: "true"
    # kubernetes.io/tls-acme: "true"
  name: landing-ingress
  namespace: landing
spec:
  tls:
  - hosts:
    - greole.xyz
    secretName: landing-cert-key-prod
  rules:
  - host: greole.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing-service
            port:
              number: 80
